--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@perawallet/connect": "^0.0.12",
     "@reduxjs/toolkit": "^1.8.2",
+    "crypto-browserify": "^3.12.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
